--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque voluptas maiores exercitationem sint, placeat praesentium, et architecto magnam corporis, ut aspernatur?<br>
      Nostrum magni numquam at. Laboriosam ipsa soluta labore provident?</p> 
      <img src="note.png" alt="Notebook" width="400" >
+    <br> <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet impedit placeat, non voluptates architecto magnam quae doloribus quos hic suscipit nisi excepturi eum temporibus voluptate laudantium officiis,<br> deleniti libero aspernatur.</p2>
+    <br><img src="realmadrid.png" alt="Real" width="400" >
 </body>
 </html>
